<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_back" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_word"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/cyan"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/word_meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/hint_meaning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" >
        </TextView>

        <TextView
            android:id="@+id/word_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/hint_example"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" >
        </TextView>

        <TextView
            android:id="@+id/word_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/hint_note"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle_golden"
                android:onClick="onClick"
                android:text="@string/button_ok"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle_golden"
                android:onClick="onClick"
                android:text="@string/button_next"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/buttonstyle_blue"
            android:onClick="onClick"
            android:text="@string/button_edit"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>