<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_back" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/word"
            style="@style/edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_word"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/cyan"
            android:textSize="45sp" >

            <requestFocus />
        </EditText>

        <RatingBar
            android:id="@+id/word_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:numStars="5"
            android:rating="5"
            android:stepSize="0.1" />

        <EditText
            android:id="@+id/word_meaning"
            style="@style/edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:hint="@string/hint_meaning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" >
        </EditText>

        <EditText
            android:id="@+id/word_example"
            style="@style/edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:hint="@string/hint_example"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" >
        </EditText>

        <EditText
            android:id="@+id/word_note"
            style="@style/edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:hint="@string/hint_note"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" >
        </EditText>

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/buttonstyle_golden"
            android:onClick="onClick"
            android:text="@string/button_add"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>